# mpq-folder-win-rs

./: BUILD_SCRIPTS_OBSOLETE.md  BUILD_WINDOWS.md  Cargo.toml  README.md  WINFSP_MIGRATION.md  build-only.sh  build-publish.sh  build-settings.sh  build-winfsp.sh  build.rs  rustfmt.toml
.cargo/: config.toml
assets/: build-report.txt
preview/: PROMPT.md
src/: archive.rs  class_factory.rs  dll_export.rs  lib.rs  log.rs  main.rs  mpq_filesystem.rs  mpq_shell_provider.rs  thumbnail_provider.rs
src/utils/: create_hbitmap_bgra_premul.rs  decode_blp_rgba.rs  guid.rs  mod.rs  resize_fit_rgba.rs  resize_fit_rgba_rect.rs  rgba_to_bgra.rs  rgba_to_bgra_premul.rs
