[package]
name = "mpq-folder-win"
version = "0.1.40"
edition = "2024"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
license = "MIT"
repository = "https://github.com/WarRaft/mpq-folder-win-rs"
readme = "README.md"
keywords = ["mpq", "warcraft", "archive", "shell"]
categories = ["filesystem"]
description = """
Windows shell handler (COM DLL) that exposes Blizzard MPQ archives as Explorer folders.
Includes a separate CLI installer tool for easy registration/unregistration.
"""

[dependencies]
windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Memory",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_UI_Shell_Common",
    "Win32_UI_Shell_PropertiesSystem",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_LibraryLoader",
    "Win32_System_SystemInformation",
    "Win32_System_Threading",
    "Win32_System_Diagnostics",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_Security",
    "Win32_System_Variant"
] }
windows-core = "0.62.2"
windows-implement = "0.60.2"
widestring = "1.2.1"
dialoguer = "0.12.0"
winreg = "0.55.0"
windows-result = "0.4.1"

[build-dependencies]
image = "0.25.8"
ico = "0.4.0"
winresource = "0.1.23"

# ------------------------------
# Library section (the COM DLL)
# ------------------------------
[lib]
name = "mpq_folder_win"
crate-type = ["cdylib", "rlib"]

# ------------------------------
# CLI binaries (installer, helper)
# ------------------------------
[[bin]]
name = "mpq-folder-win-installer"
path = "src/bin/installer.rs"
