[package]
name = "mpq-folder-win"
version = "0.1.40"
edition = "2024"
authors = ["nazarpunk <nazarpunk@gmail.com>"]
license = "MIT"
repository = "https://github.com/WarRaft/mpq-folder-win-rs"
readme = "README.md"
keywords = ["mpq", "warcraft", "archive", "shell"]
categories = ["filesystem"]
description = """
Windows virtual filesystem using WinFsp that mounts Blizzard MPQ archives as drive letters.
Includes an installer tool for WinFsp driver check and file association registration.
"""

[dependencies]
# WinFsp for virtual filesystem mounting
winfsp = { version = "0.12.4+winfsp-2.1", features = ["full"] }

windows = { version = "0.62.2", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_Storage_FileSystem",
    "Win32_Graphics_Gdi",
    "Win32_UI_Shell",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Console",
    "Win32_Security"
] }
windows-core = "0.62.2"
widestring = "1.2.1"
dialoguer = "0.12.0"
winreg = "0.55.0"

[build-dependencies]
winfsp = "0.12"  # For winfsp_link_delayload()
image = "0.25.8"
ico = "0.4.0"
winresource = "0.1.23"

# ------------------------------
# Library section (shared code)
# ------------------------------
[lib]
name = "mpq_folder_win"
crate-type = ["rlib"]

# ------------------------------
# Main viewer (mounts MPQ via WinFsp)
# ------------------------------
[[bin]]
name = "mpq-viewer"
path = "src/main.rs"

# ------------------------------
# Installer tool
# ------------------------------
[[bin]]
name = "mpq-folder-win-installer"
path = "src/bin/installer.rs"
